@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-10-02T01:54:35Z",
+  "timestamp" : "2022-10-02T08:22:23Z",
   "count_outdated" : 362,
   "uniques_outdated" : 193,
-  "count" : 396,
-  "uniques" : 214,
+  "count" : 397,
+  "uniques" : 215,
   "clones" : [
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
