@@ -1,11 +1,11 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-01T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
