@@ -1,3 +1,11 @@
+2022-10-02T08:22:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167879455
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 193 362 / 214 396
+* notice: next accum: outdated-unq outdated-all / unq all: 193 362 / 215 397
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-18 2022-10-02]
+
 2022-10-02T01:54:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3166945950
 * notice: last 14d: unq all: 2 34
